improve multiple part of the code

--- a/plugin.yml
+++ b/plugin.yml
@@ -67,3 +67,5 @@ commands:
   stats:
     description: to see the stats of a player.
     aliases: [stat]
+  resetplayer:
+    description: reset a player
