--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
 			<id>sk89q-repo</id>
 			<url>https://maven.enginehub.org/repo/</url>
 		</repository>
+		<repository>
+			<id>dmulloy2-repo</id>
+			<url>https://repo.dmulloy2.net/nexus/repository/public/</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -67,7 +71,12 @@
 			<artifactId>craftbukkit</artifactId>
 			<version>LATEST</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/ressources/craftbukkit-1.8.8-R0.1.jar</systemPath>
+			<systemPath>${project.basedir}/../ressources/craftbukkit-1.8.8-R0.1.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com.comphenix.protocol</groupId>
+			<artifactId>ProtocolLib</artifactId>
+			<version>4.5.0</version>
 		</dependency>
 	</dependencies>
 </project>
