--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
 			<id>dmulloy2-repo</id>
 			<url>https://repo.dmulloy2.net/nexus/repository/public/</url>
 		</repository>
+		<repository>
+			<id>viaversion-repo</id>
+			<url>https://repo.viaversion.com</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -77,6 +81,11 @@
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib</artifactId>
 			<version>4.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>us.myles</groupId>
+			<artifactId>viaversion</artifactId>
+			<version>LATEST</version>
 		</dependency>
 	</dependencies>
 </project>
