--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 		<dependency>
 			<groupId>us.myles</groupId>
 			<artifactId>viaversion</artifactId>
-			<version>LATEST</version>
+			<version>2.2.3</version>
 		</dependency>
 	</dependencies>
 </project>
